--- a/democrachat-frontend/css/components/navbar.css
+++ b/democrachat-frontend/css/components/navbar.css
@@ -22,7 +22,7 @@
     align-items: center;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 600px) {
     .navbar {
     grid-template-areas: "left middle right";
     grid-template-columns: 1fr 1fr auto;
